--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,15 @@ nav {
     top: 0;
     background: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10px);
-    z-index: 2;
+    z-index: 1;
 }
+
+@media screen and (max-width: 750px) {
+    nav {
+        position: absolute;
+    }
+}
+
 
 .nav-left, .nav-left a {
     font-size: 5vh;
@@ -124,22 +131,14 @@ section {
 .profile-photo {
     width: 25vh;
     height: 25vh;
-    border-radius: 2%;
+    border-radius: 50%;
     object-fit: cover;
     position: relative;
     z-index: 1;
-    animation: roundify 1s ease forwards;
     transition: border-radius 0.3s ease;
 }
 
-@keyframes roundify {
-    0% {
-        border-radius: 2%;
-    }
-    100% {
-        border-radius: 50%;
-    }
-}
+
 
 .profile-photo:hover {
     border-radius: 2% !important;
